updates Home backgrounds: backgrounds now appear when the top of their div container element is in the bottom third of the window or higher (uses jQuery methods); the previous update did not change backgrounds in the correct spots on mobile, when the layout is longer than on a computer; this update works for all layouts and modern browser types

--- a/client/styling/basicElements.scss
+++ b/client/styling/basicElements.scss
@@ -453,7 +453,7 @@ body {
   transition: opacity .2s cubic-bezier(0.38, 0.4, 1, -0.01);
 }
 
-.green-fixed-background, .blue-fixed-background, .red-fixed-background {
+.green-fixed-background, .blue-fixed-background, .red-fixed-background, .home-dark-fixed-background {
   overflow-x: hidden;
 }
 .green-fixed-background::after {
@@ -467,6 +467,10 @@ body {
 .red-fixed-background::after {
   @extend .fixed-parallax-background;
   @extend .redBackground;
+}
+.home-dark-fixed-background::after {
+  @extend .fixed-parallax-background;
+  background-color: $black-with-green;
 }
 .blue-fixed-small-background {
   @include pattern-small-background-fixed($black-with-blue, 'blue');
